# hjkl-engine

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PUBLIC_API.md  README.md  SECURITY.md  SPEC.md
.github/ISSUE_TEMPLATE/: bug_report.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: handle_key.rs
src/: buf_helpers.rs  buffer_impl.rs  editor.rs  ex.rs  input.rs  lib.rs  motions.rs  registers.rs  search.rs  substitute.rs  types.rs  viewport_math.rs  vim.rs
tests/: proptest_fsm.rs
