[package]
name = "hjkl-engine"
description = "Vim FSM, motion grammar, and ex commands. Pre-1.0 churn."
keywords = ["vim", "modal", "editor", "fsm"]
categories = ["text-editors"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme = "README.md"

[features]
default = ["serde", "ratatui", "crossterm"]
serde = ["dep:serde"]
ratatui = ["dep:ratatui", "hjkl-buffer/ratatui"]
crossterm = ["dep:crossterm"]

[dependencies]
hjkl-buffer = { path = "../hjkl-buffer", version = "=0.0.0" }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28.1", features = [
  "event-stream",
], optional = true }
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
